# advent-of-code-2016

./: LICENSE  README.md
1/: src.py
10/: src.py
11/: src.py
12/: parse.hs  src.py
12/hs/Day12/: Day12.cabal
12/hs/Day12/app/: Main.hs
12/hs/Day12/src/Day12/: Parser.hs
13/: src.py
14/: src.py
15/: src.py
16/: src.py
17/: src.py
18/: src.py
19/: src.py
2/: src.py
20/: src.py
21/: src.py
22/: src.py
23/: src.py
23/hs/: optimize.hs
24/: src.py
3/: src.py
4/: src.py
5/: src.py
6/: src.py
7/: src.py
8/: src.py
9/: src.py
template/: src.py
