name:                Day12
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day12.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.0
  default-language:    Haskell2010

executable Day12-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Day12
  default-language:    Haskell2010
